--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Home
-email: 453926744@qq.com
+email: jiangyan0216@foxmail.com
 description: > # this means to ignore newlines until "baseurl:"
   西安电子科技大学研究生
 baseurl: "" # the subpath of your site, e.g. /blog
